--- a/pom.xml
+++ b/pom.xml
@@ -10,17 +10,24 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.aankiel</groupId>
+			<groupId>com.github.aar0nsky</groupId>
 			<artifactId>CommonUtils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.aankiel</groupId>
+			<groupId>com.github.aar0nsky</groupId>
 			<artifactId>CommonTesting</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<finalName>NoMoreCaffeine</finalName>
